--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <script src="scripts/mathlib-min.js"></script>
       <script src="scripts/k3d-min.js"></script>
       <script src="scripts/canvasmark_v6.js"></script>
+      <script src="scripts/jquery-1.11.3.min.js"></script>
       <style type="text/css">
 @font-face
 {
